--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Aleo&family=Libre+Baskerville:wght@700&family=Lora&display=swap');
