--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,4 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Aleo&family=Libre+Baskerville:wght@700&family=Lora&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Aleo&family=Antic+Slab&family=Libre+Baskerville:wght@700&family=Lora&family=Maitree:wght@500&display=swap');
